<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/xyz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginBottom="90dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="16"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/title_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addNew"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:padding="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColorHint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/con_entry_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/cname"
                        android:textColor="@color/Black"
                        android:textSize="16sp"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginBottom="100dp">
                    <EditText
                        android:id="@+id/con_entry_phone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/phone"
                        android:textColor="@color/Black"
                        android:textSize="16sp"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignBottom="@+id/xyz"
        android:paddingVertical="10dp"
        android:paddingHorizontal="40dp"
        android:layout_marginBottom="-80dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="25dp"
            android:layout_marginBottom="15dp">
            <Button
                android:id="@+id/con_image_select_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/select"
                android:background="@drawable/cardshape"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="25dp">
            <Button
                android:id="@+id/con_entry_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:background="@drawable/cardshape"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/con_entry_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/Black"
                android:background="@drawable/cardshape2"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>