<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white">

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:layout_centerInParent="true">
        <LinearLayout
            android:id="@+id/xyz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="16"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/white">
                    <TextView
                        android:id="@+id/r_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:textColor="@color/Black"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:padding="10dp"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/r_username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:textColor="@color/Black"
                            android:textSize="18sp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/r_userphone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:textColor="@color/Black"
                            android:textSize="18sp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/r_user_dob"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="date"
                            android:hint="@string/birth"
                            android:textColor="@color/Black"
                            android:textSize="18sp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColorHint="@color/colorPrimary">

                        <RadioGroup
                            android:id="@+id/r_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender"
                                android:textSize="18sp"
                                android:padding="5dp"
                                android:textColor="@color/colorPrimary"/>
                            <RadioButton
                                android:id="@+id/userGMale"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/male"
                                android:layout_marginRight="10dp"
                                android:textSize="18sp"
                                android:textColor="@color/colorPrimary"/>

                            <RadioButton
                                android:id="@+id/userGFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/female"
                                android:layout_marginRight="10dp"
                                android:textSize="18sp"

                                android:textColor="@color/colorPrimary"/>
                        </RadioGroup>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/r_useremail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/email"
                            android:inputType="textWebEmailAddress"
                            android:textColor="@color/Black"
                            android:textSize="18sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/r_userpass"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/pass"
                            android:inputType="textWebPassword"
                            android:textColor="@color/Black"
                            android:textSize="18sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginBottom="50dp">
                        <EditText
                            android:id="@+id/r_userrepass"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/re_pass"
                            android:inputType="textWebPassword"
                            android:textColor="@color/Black"
                            android:textSize="18sp"/>
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignBottom="@+id/xyz"
            android:paddingVertical="10dp"
            android:paddingHorizontal="40dp"
            android:layout_marginBottom="-80dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="25dp">
                <Button
                    android:id="@+id/r_signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:background="@drawable/cardshape"/>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/r_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/Black"
                    android:background="@drawable/cardshape2"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>