<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile">
    <Button
        android:id="@+id/pro_img_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:background="#00141212"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/pro_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/person"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white">

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="170dp"
        android:paddingHorizontal="40dp"
        android:layout_centerInParent="true">
        <LinearLayout
            android:id="@+id/xyz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="16"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textColor="@color/Black"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:padding="10dp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="20"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="2"
                            android:src="@drawable/person"/>
                        <TextView
                            android:id="@+id/pro_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="18"
                            android:text="@string/name"
                            android:textColor="@color/Black"
                            android:textSize="18sp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="20"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="2"
                            android:src="@drawable/phone"/>
                        <TextView
                            android:id="@+id/pro_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="18"
                            android:text="@string/phone"
                            android:textColor="@color/Black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="20"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="2"
                            android:src="@drawable/ic_email_black_24dp"/>
                        <TextView
                            android:id="@+id/pro_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="18"
                            android:text="@string/email"
                            android:textColor="@color/Black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="20"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="2"
                            android:src="@drawable/birthday"/>
                        <TextView
                            android:id="@+id/pro_dob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="18"
                            android:text="@string/birth"
                            android:textColor="@color/Black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="20"
                        android:layout_marginBottom="40dp">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="2"
                            android:src="@drawable/gender"/>
                        <TextView
                            android:id="@+id/pro_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="18"
                            android:text="@string/gender"
                            android:textColor="@color/Black"
                            android:textSize="18sp" />
                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignBottom="@+id/xyz"
            android:paddingVertical="10dp"
            android:paddingHorizontal="40dp"
            android:layout_marginBottom="-80dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="25dp">
                <Button
                    android:id="@+id/edit_profile_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:background="@drawable/cardshape"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/home_intent_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="@color/Black"
                    android:background="@drawable/cardshape2"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>